# MCx86

./: .gitignore  CMakeLists.txt  Minecraft Computer Breakdown.cpp  Minecraft Computer Breakdown.sln  README.md  main.cpp
Computer Tests/: ALU_tests.cpp  CMakeLists.txt  Computer Tests.vcxproj  Computer Tests.vcxproj.filters  RAM_tests.cpp  stdafx.cpp
Minecraft Computer Breakdown/: ALU.h  ALU.hpp  CMakeLists.txt  CPU.cpp  CPU.h  CPU_instructions.cpp  CPU_non_arithmetic_instructions.cpp  CPU_state_machine_instructions.cpp  IA-32_decoder.h  IA-32_mapping.cpp  IA-32_mapping.h  Instructions.h  Minecraft Computer Breakdown.cpp  Minecraft Computer Breakdown.vcxproj  Minecraft Computer Breakdown.vcxproj.filters  RAM.h  RAM.hpp  RAM_2.h  RAM_2.hpp  ROM.h  StaticBinaryTreeManagedMemory.hpp  asm_tests.cpp  circuit_branch_monitor.h  cpp.hint  cycle_changes_monitor.h  data_types.h  exceptions.h  instructions.cpp  instructions.h  instructions.hpp  instructions_2.cpp  instructions_2.hpp  interrupts.h  load_program.cpp  logger.cpp  memory_manager.hpp  pch.h  print_instructions.cpp  print_instructions.h  registers.cpp  (+3 more)
Minecraft Computer Breakdown/CPU/: CPU.cpp  CPU.h  CPU_arithmetic_instructions.cpp  CPU_instructions.cpp  CPU_non_arithmetic_instructions.cpp  CPU_state_machine_instructions.cpp  exceptions.h  instructions.cpp  instructions.h  interrupts.h  new_instruction.h  opcodes.cpp  opcodes.h  register_flags_interface.h  registers.cpp  registers.h
Minecraft Computer Breakdown/memory/: RAM.hpp  ROM.hpp  StaticBinaryTreeManagedMemory.hpp  buffer.hpp  descriptor_table.hpp  exceptions.hpp  memory_interfaces.hpp  memory_manager.hpp  stack.hpp
compare_with_processor/: CMakeLists.txt  program_compare.cpp
executable_file_data/: instructions_map.txt  memory_map.txt
src/: ALU.hpp  CMakeLists.txt  cycle_changes_monitor.h  data_types.h  load_program.h  logger.h  print_instructions.h
src/CPU/: CPU_state_machine_instructions.cpp  exceptions.h  interrupts.h  opcodes.h  register_flags_interface.h  registers.h
src/memory/: RAM.hpp  memory_manager.hpp  stack.hpp
tests/: CMakeLists.txt  RAM_tests.cpp  program_tests.cpp  tests_main.cpp
utility_scripts/: eflags_analyser.cpp
